test/fail/local-assign-t.rnp
let a = 1;
a = true;
---
TypeError: Expected number but got boolean
 --> fail/local-assign-t.rnp:2:5
  |
2 | a = true;
  |     ^^^^ Expected number but got boolean
  |
